[PowerPC] Implement optimized AES-GCM on Vale

--- a/Makefile.include
+++ b/Makefile.include
@@ -21,6 +21,7 @@ VALE_DIRS	= \
   $(HACL_HOME)/vale/code/arch/ppc64le \
   $(HACL_HOME)/vale/code/crypto/aes \
   $(HACL_HOME)/vale/code/crypto/aes/x64 \
+  $(HACL_HOME)/vale/code/crypto/aes/ppc64le \
   $(HACL_HOME)/vale/code/crypto/bignum \
   $(HACL_HOME)/vale/code/crypto/ecc/curve25519 \
   $(HACL_HOME)/vale/code/crypto/poly1305 \
