--- a/Makefile.common
+++ b/Makefile.common
@@ -203,9 +203,9 @@ BIGNUM_BUNDLE= \
   -bundle Hacl.Bignum.Base,Hacl.Bignum.Addition,Hacl.Bignum.Convert,Hacl.Bignum.Lib,Hacl.Bignum.Multiplication[rename=Hacl_Bignum_Base] \
   -static-header Hacl.Bignum.Base,Hacl.Bignum.Addition,Hacl.Bignum.Convert,Hacl.Bignum.Lib,Hacl.Bignum.Multiplication \
   -bundle Hacl.Bignum,Hacl.Bignum.*[rename=Hacl_Bignum]
-AES_BUNDLE=-bundle Hacl.AES_128.BitSlice=Hacl.Impl.AES.* -bundle Hacl.AES_128.NI=Hacl.Impl.AES.* -bundle Hacl.AES_256.BitSlice=Hacl.Impl.AES.* -bundle Hacl.AES_256.NI=Hacl.Impl.AES.*
-GF128_BUNDLE=-bundle Hacl.Gf128.NI=Hacl.Impl.Gf128.*
-AES_GCM_BUNDLE=-bundle Hacl.AES_GCM_128.NI -bundle Hacl.AES_GCM_256.NI
+AES_BUNDLE=-bundle Hacl.AES_128.CTR32.BitSlice=Hacl.Impl.AES.* -bundle Hacl.AES_128.CTR32.NI=Hacl.Impl.AES.* -bundle Hacl.AES_256.CTR32.BitSlice=Hacl.Impl.AES.* -bundle Hacl.AES_256.CTR32.NI=Hacl.Impl.AES.*
+GF128_BUNDLE=-bundle Hacl.Gf128.NI=Hacl.Impl.Gf128.FieldNI -bundle Hacl.Gf128.CT64=Hacl.Impl.Gf128.CT64
+AES_GCM_BUNDLE=-bundle Hacl.AES_GCM_128.NI -bundle Hacl.AES_GCM_256.NI -bundle Hacl.AES_GCM_128.CT64 -bundle Hacl.AES_GCM_256.CT64
 
 # 3. OCaml
 
