update gcm branch

--- a/Hacl.fst.config.json
+++ b/Hacl.fst.config.json
@@ -44,6 +44,9 @@
     "code/rsapss",
     "code/ffdhe",
     "code/k256",
+    "code/aes",
+    "code/aes-gcm",
+    "code/gf128",
     "vale/code/arch",
     "vale/code/arch/x64",
     "vale/code/arch/x64/interop",
